锁升级 demo